--- a/PremiumDeluxeMotorsport.NET/PDM.NET.vbproj
+++ b/PremiumDeluxeMotorsport.NET/PDM.NET.vbproj
@@ -10,7 +10,7 @@
     <AssemblyName>PDMCarShopMod</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -133,13 +133,16 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\pdm_banner.png" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\NativeUI-master\PDMCarShopGUI.csproj">
       <Project>{f3e16ed9-dbf7-4e7b-b04b-9b24b11891d3}</Project>
       <Name>PDMCarShopGUI</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="shopui_title_pdm.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <PropertyGroup>
