--- a/PremiumDeluxeMotorsport.NET/PDM.NET.vbproj
+++ b/PremiumDeluxeMotorsport.NET/PDM.NET.vbproj
@@ -111,6 +111,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="timer.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
