--- a/PremiumDeluxeMotorsportCarDealership3/PDMCD4.vbproj
+++ b/PremiumDeluxeMotorsportCarDealership3/PDMCD4.vbproj
@@ -77,6 +77,7 @@
     <Compile Include="Class\Logger.vb" />
     <Compile Include="Class\Memory.vb" />
     <Compile Include="Class\Reader.vb" />
+    <Compile Include="Class\ReadMemory.vb" />
     <Compile Include="Class\Resources.vb" />
     <Compile Include="Class\Timer.vb" />
     <Compile Include="PDMMenu.vb" />
