--- a/PremiumDeluxeMotorsportCarDealership3/PDMCD4.vbproj
+++ b/PremiumDeluxeMotorsportCarDealership3/PDMCD4.vbproj
@@ -10,7 +10,8 @@
     <AssemblyName>PDMCD4</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
